--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ header {
     border-radius: 10px;
     padding: 15px;
     text-align: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+}
+
+.product:hover {
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
 }
 
 .product img {
@@ -265,7 +271,7 @@ footer {
 
 <header>
     <img src="imagen/Logo1.jpg" class="header-logo">
-    <h1 style="font-family: 'Georgia', serif; font-size: 2.5em; font-weight: bold; color: var(--text);">Variedades García</h1>
+    <h1 style="font-family: 'Georgia', serif; font-size: 3em; font-weight: bold; color: var(--text); text-shadow: 2px 2px 4px rgba(0,0,0,0.3); margin: 20px 0; letter-spacing: 2px;">Variedades García</h1>
     <p style="font-family: 'Georgia', serif; font-size: 1.2em; color: var(--text);">Todos nuestros productos son de alta calidad y extraídos de USA</p>
     <a class="whatsapp-link" href="https://wa.me/44969900" target="_blank">
         Escríbenos por WhatsApp
